# artifex-ai

./: README.md  baseline.ipynb  competitor-table.md  product-prototype.md  product-standards.md
product-research/: analysis-comparison.md  competitor-table.md  product-prototype.md
tg-bot/: .pre-commit-config.yaml  README.md  pyproject.toml
tg-bot/src/: .gitignore  bot.py  buttons.py  client.py  dialogs.py  enums.py  handler.py  pyproject.toml  schemas.py  settings.py
